--- a/Property Details.html
+++ b/Property Details.html
@@ -118,17 +118,17 @@
                         poutine neutra cardigan hoodie pop-up.</p>
                 </div>
                  <div class="link">
-                        <h3>Best useful links?</h3>
+                        <h3 class="toggle">Best useful links?</h3>
 
-                        <p style="display: none;">Get the best villa website template in HTML CSS<br> and Bootstrap for
+                        <p>Get the best villa website template in HTML CSS<br> and Bootstrap for
                             your
                             business. TemplateMo
                             <br>provides you
                             the best free CSS templates in the<br> world. Please tell your friends about it.
                         </p>
                         <hr>
-                        <h3>How does this work?</h3>
-                        <p style="display: none;">Dolor almesit amet, consectetur adipiscing elit,<br> sed doesn't
+                        <h3 class="toggle">How does this work?</h3>
+                        <p>Dolor almesit amet, consectetur adipiscing elit,<br> sed doesn't
                             eiusmod
                             tempor incididunt ut
                             labore<br>
@@ -136,8 +136,8 @@
                             magna<br>
                             aliqua.</p>
                         <hr>
-                        <h3>Why is Villa Agency the best?</h3>
-                        <p style="display: none;">Dolor almesit amet, consectetur adipiscing elit, <br> sed doesn't
+                        <h3 class="toggle">Why is Villa Agency the best?</h3>
+                        <p>Dolor almesit amet, consectetur adipiscing elit, <br> sed doesn't
                             eiusmod
                             tempor incididunt ut
                             labore<br>
@@ -146,60 +146,47 @@
                             aliqua.</p>
                     </div>
             </section>
-             <section class="Deal">
-            <div class="deal-info">
-                <div class="deal-info-sell">
-                    <h3>| Best Deal</h3>
-                    <h1>Find Your Best</h1>
-                    <h1>Deal Right Now!</h1>
-                </div>
-                <div class="deal-info-button">
-                    <button style="background-color: #f35525;">Appartment</button>
-                    <button>Villa House</button>
-                    <button>Penthouse</button>
-                </div>
+            <section class="Deal"> <div class="deal-info">
+            <div class="deal-info-sell">
+                <h3>| Best Deal</h3>
+                <h1>Find Your Best</h1>
+                <h1>Deal Right Now!</h1>
             </div>
-            <div class="deal-main">
-                <div class="detail-info-content">
-                    <div class="content1">
-                        <p>Total Flat Space &nbsp <span>185 m2</span></p>
-                    </div>
-                    <div class="content1">
-                        <p>Floor number &nbsp<span>26th</span></p>
-                    </div>
-                    <div class="content1">
-                        <p>Number of rooms &nbsp <span>4</span></p>
-                    </div>
-                    <div class="content1">
-                        <p>Parking Available &nbsp <span>Yes</span></p>
-                    </div>
-                    <div style="border-bottom: none;" class="content1">
-                        <p>Payment Process &nbsp <span>Bank</span></p>
-                    </div>
+            <div class="deal-info-button"> <button data-type="apartment" class="active">Appartment</button> <button
+                    data-type="villa">Villa House</button> <button data-type="penthouse">Penthouse</button> </div>
+        </div>
+        <div class="deal-main">
+            <div class="detail-info-content">
+                <div class="content1">
+                   <p>Total Flat Space &nbsp <span id="space">185 m2</span></p>
 
                 </div>
-                <div id="speacila" class="deal-info-image">
-                    <img src="image/img3.jpg" width="460px" height="360px" alt="">
+                <div class="content1">
+                    <p>Floor number &nbsp<span id="floor">26th</span></p>
                 </div>
-                <div class="deal-info-content1">
-                    <h4>Extra Info About Property</h4>
-                    <br>
-                    <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit, do<br> eiusmod tempor pack
-                        incididunt ut<br>
-                        labore et dolore magna aliqua <br>quised ipsum suspendisse.</p>
-                    <br>
-                    <br>
-                    <p>
-                        When you need free CSS templates,<br> you can simply type TemplateMo in<br> any search engine
-                        website.
-                        In<br>
-                        addition, you can type TemplateMo<br> Portfolio, TemplateMo One Page<br> Layouts, etc.
-                    </p>
-                    <li><a style="color: #ffffff; " class="Schedule" href="#"><i
-                                class="fa-solid fa-calendar"></i>Schedule a
-                            visit</a></li>
+                <div class="content1">
+                    <p>Number of rooms &nbsp <span id="rooms">4</span></p>
+                </div>
+                <div class="content1">
+                    <p>Parking Available &nbsp <span id="parking">Yes</span></p>
+                </div>
+                <div style="border-bottom: none;" class="content1">
+                    <p>Payment Process &nbsp <span id="payment">Bank</span></p>
                 </div>
             </div>
+            <div class="deal-info-image"> <img id="dealImage" src="image/img3.jpg" width="410px" height="330px" alt="">
+            </div>
+            <div class="deal-info-content1">
+                <h4 id="dealTitle">Extra Info About Property</h4> <br>
+                <p id="dealPara1">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit, do<br> eiusmod tempor
+                    pack incididunt ut<br> labore et dolore magna aliqua <br>quised ipsum suspendisse.</p> <br> <br>
+                <p id="dealPara2"> When you need free CSS templates,<br> you can simply type TemplateMo in<br> any
+                    search engine website. In<br> addition, you can type TemplateMo<br> Portfolio, TemplateMo One
+                    Page<br> Layouts, etc. </p>
+                <li><a style="color: #ffffff; " class="Schedule" href="#"><i class="fa-solid fa-calendar"></i>Schedule a
+                        visit</a></li>
+            </div>
+        </div>
         </section>
 
         
